--- a/LucaProject/Products.html
+++ b/LucaProject/Products.html
@@ -25,7 +25,7 @@
     </header>
     <p>We have a high range of courses wich are avalaible in part-time and full-time form:
         Architecture</p>
-    
+    <p>Medicine</p>
     <p>Engeneering</p>  
     <p>IT courses (cloding, mobiling, data analysis)</p>
     <p>Phisic</p>
