--- a/LucaProject/About.html
+++ b/LucaProject/About.html
@@ -12,23 +12,27 @@
 
         <img src="img/nci.jpg" />
 
-        <nav>
-            <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="products.html">Products</a></li>
-                <li class="active"><a href="#">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+        <div class="menu">
+            <nav>
+                <ul>
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="products.html">Products</a></li>
+                    <li class="active"><a href="#">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
 
-            </ul>
-        </nav>
+                </ul>
+            </nav>
+            </div>
 
-    </header>
-    <p>
-        The National College Ireland was founded in 1951. 
-        Since than many students contributed to make our society a better society.
-        Every ear our institute was carefull to be up to date with the last modern concepts, materials 
-        and labs in order to give an acellent preparation under every aspect.
+                <div class="box1">
 
-    </p>
+                    <p>
+                        The National College Ireland was founded in 1951.
+                        Since than many students contributed to make our society a better society.
+                        Every ear our institute was carefull to be up to date with the last modern concepts, materials
+                        and labs in order to give an acellent preparation under every aspect.
+                </div>
+                </p>
+</header>
 </body>
 </html>
