--- a/LucaProject/Contact.html
+++ b/LucaProject/Contact.html
@@ -11,18 +11,24 @@
     <header class="mainHeader">
 
         <img src="img/nci.jpg" />
+        
+        <div class="menu">
 
-        <nav>
-            <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="products.html">Products</a></li>
-                <li><a href="about.html">About</a></li>
-                <li class="active"><a href="#">Contact</a></li>
-            </ul>
-        </nav>
+            <nav>
+                <ul>
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="products.html">Products</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li class="active"><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+            </div>
 
-    </header>
+            <div class="box1">
 
-    <p>You can call us at Tel:1850 221 721 or our write us at admissions@ncirl.ie </p>
+
+                <p>You can call us at Tel:1850 221 721 or our write us at admissions@ncirl.ie </p>
+            </div>
+</header>
 </body>
 </html>
