--- a/LucaProject/Home.html
+++ b/LucaProject/Home.html
@@ -12,31 +12,36 @@
 
         <img src="img/nci.jpg" />
 
-        <nav>
-            <ul>
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="products.html">Products</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
 
-    </header>
+        <div class="menu">
+            <nav>
+                <ul>
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="products.html">Products</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+            </div>
+
+</header>
 
     <div class="mainContent">
         <div class="content">
             <article class="topContent">
 
-                <header>
-                    <h2><a href="#" title="About us">What we do</a></h2>
+                    <div class="box1">
+                    <header>
+                        <h2><a href="#" title="About us">What we do</a></h2>
 
-                </header>
+                    </header>
 
-                <p>
-                    Our college is the highest rated college, compared to other universities, in all Ireland. 
-                    The structure, the lectures and the carreer-bridge quality standards guarantee a reliable, effective and upgraded
-                    preparation to every student. After every course the student will be professionally ready to jump in the high level job world.
-                </p>
+                    <p>
+                        Our college is the highest rated college, compared to other universities, in all Ireland.
+                        The structure, the lectures and the carreer-bridge quality standards guarantee a reliable, effective and upgraded
+                        preparation to every student. After every course the student will be professionally ready to jump in the high level job world.
+                    </p>
+                    </div>
 
 </body>
 </html>
